# skull

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  client.c  client_funcs.c  client_funcs.h  communication.c  communication.h  constants.h  server.c  server_funcs.c  server_funcs.h  utils.c  utils.h
